Fix latlon overlap around poles and antimeridian.

--- a/docs/map.css
+++ b/docs/map.css
@@ -12,7 +12,7 @@ body {
 
 #map {
     width: 99vw;
-    height: 69vw;
+    height: 99vh;
 }
 
 dl dt {
